--- a/templates/countries/index.html
+++ b/templates/countries/index.html
@@ -18,6 +18,7 @@
       <td>{{ country.visited }}</td>
       <td>|</td>
       <td>{{ country.wishlist }}</td>
+      <td><a href="/countries/{{country.id}}/edit">Edit</a></td>
     </tr>
     {% endfor %}
   </table>
