--- a/templates/cities/index.html
+++ b/templates/cities/index.html
@@ -4,7 +4,7 @@
 <h1>Cities</h1>
 
 {% for city in cities %}
-<p>Name: {{city.name}}</p>
+<p>Name:<a href="/cities/{{city.id}}"> {{city.name}}</a></p>
 <p>Country: {{city.country.name}}</p>
 <p>Visited: {{city.visited}}</p>
 <p>Wishlist: {{city.wishlist}}</p>
