--- a/templates/cities/index.html
+++ b/templates/cities/index.html
@@ -8,8 +8,12 @@
 <p>Country: {{city.country.name}}</p>
 <p>Visited: {{city.visited}}</p>
 <p>Wishlist: {{city.wishlist}}</p>
+<a href="cities/{{city.id}}/edit">Edit</a>
+<br>
 <br>
 {% endfor %}
 <br>
+
+
   <a href="/city/new">Add City</a>
   {% endblock %}
