--- a/templates/cities/index.html
+++ b/templates/cities/index.html
@@ -9,6 +9,7 @@
 <p>Visited: {{city.visited}}</p>
 <p>Wishlist: {{city.wishlist}}</p>
 <a href="cities/{{city.id}}/edit">Edit</a>
+<form action="/cities/{{city.id}}/delete" method="POST"><button>Delete</button></form>
 <br>
 <br>
 {% endfor %}
