Added wishlist & visited pages

--- a/templates/wishlist/index.html
+++ b/templates/wishlist/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Places I've visited:</h1>
+<h1>My Wishlist:</h1>
 <h3>Countries</h3>
 
     {% for country in countries %}
