--- a/templates/reviews/show.html
+++ b/templates/reviews/show.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<p>Title: {{review.name}}</p>
+<p>Title: {{review.title}}</p>
 <p>Content: {{review.content}}</p>
 <p>Attraction: {{review.attraction.name}}</p>
 <p>Entry Fee: {{review.attraction.entry_fee}}</p>
