--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/home.css">
 </head>
 <body>
     <header>
@@ -12,6 +15,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/countries">Countries</a></li>
                 <li><a href="/cities">Cities</a></li>
+                <li><a href="/attractions">Things To Do</a></li>
             </ul>
         </nav>
     </header>
