--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <img src="/static/css/Header.png">
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
