further css styling added

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,38 @@
 body {
     margin: 0% ;
 }
+
+.bg-img {
+    background-image: url("/static/css/Header.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 230px;
+}
+
+.menu-container {
+    text-align: right;
+    
+}
+
+.menu-container a {
+    display: inline-flex;
+    font-size: 18px;
+    color: oldlace;
+    padding: 70px 30px;
+    text-decoration: none;
+}
+
+.bar {
+    background-color: rgb(62, 111, 202);
+    padding: 10px;
+    text-align: center;
+}
+
+.bar a {
+    color: oldlace;
+    font-size: 18px;
+    text-decoration: none;
+    padding-left: 30px;
+    margin-left: 30px;
+    
+}
