--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<p>Start planning your next adventure!</p>
+<br>
+<br>
+<p class="welcome">Start planning your next adventure!</p>
 <br>
 <br>
 <div class="container">
