--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,3 +1,8 @@
+.welcome {
+    text-align: center;
+    font-size: 18px;
+}
+
 .container {
     display: flex;
     align-items: center;
@@ -23,6 +28,7 @@
 
 .container .home-image .content p a {
     color: oldlace;
+    text-decoration: none;
 }
 
 .content {
