--- a/templates/index.html
+++ b/templates/index.html
@@ -39,11 +39,17 @@
 
 <br>
 <br>
-<p>Know what you're looking for? Click on one of the follwing search links.</p>
+<div class="search-links">
+    <p>Know what you're looking for? Click on one of the following search links.</p>
+    <br>
+    <nav>
+        <ul>
+            <li><a href="/countries/search">Search for a country</a></li>
+            <li><a href="/cities/search">Search for a city</a></li>
+            <li><a href="/attractions/search">Search for things to do by category</a></li>
+        </ul>
+    </nav>
+</div>
 <br>
-
-
-<a href="/countries/search">Search for a country</a>
-<a href="/cities/search">Search for a city</a>
-<a href="/attractions/search">Search for things to do by category</a>
+<br>
 {% endblock %}
