--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,6 +1,6 @@
 .welcome {
     text-align: center;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .container {
@@ -22,7 +22,7 @@
 .container .home-image .content p {
     text-align: center;
     background-color: rgb(166, 211, 209);
-    font-size: 20px;
+    font-size: 23px;
 
 }
 
@@ -37,4 +37,26 @@
     left: 50%;
     transform: translate(-50%, -50%);
     
+}
+
+.search-links {
+    text-align: center;
+    font-size: 20px;
+}
+
+.search-links ul {
+    list-style: none;
+}
+
+.search-links ul li {
+    margin-top: 5px;
+    padding-right: 40px;
+    
+}
+
+.search-links ul li a {
+    text-decoration: none;
+    color: white;
+    background-color: rgb(166, 211, 209);
+    border-style: solid;
 }
