--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Travel List</title>
 
-    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/base.css">
     <link rel="stylesheet" href="/static/css/home.css">
+    <link rel="stylesheet" href="/static/css/table.css">
 </head>
 <body>
     <header>
@@ -28,6 +29,9 @@
 
         {% endblock %}
     </main>
+    <footer>
+        <p>The Travel List</p>
+    </footer>
     
 </body>
 </html>
