--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/static/css/base.css">
     <link rel="stylesheet" href="/static/css/home.css">
     <link rel="stylesheet" href="/static/css/table.css">
+    <link rel="stylesheet" href="/static/css/form.css">
 </head>
 <body>
     <header>
