--- a/templates/countries/new.html
+++ b/templates/countries/new.html
@@ -1,27 +1,35 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="page-content">
+    <h3>Add a Country To The List</h3>
+    <p>Please complete the form to add a new country to your available destination list.</p>
 
-<form action="/countries" method="post">
-    <div>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" placeholder="Name" required autofocus>
-    </div>
-    <div>
-        <label for="visited">Visited:</label>
-        <select name="visited" id="visited">
-            <option value="true">True</option>
-            <option value="false">False</option>
-        </select>
-    </div>
-    <div>
-        <label for="wishlist">Wishlist:</label>
-        <select name="wishlist" id="wishlist">
-            <option value="true">True</option>
-            <option value="false">False</option>
-        </select>
-    </div>
+
+    <form action="/countries" method="post">
+        <div class="input-container">
+            <label for="name">Name: </label>
+            <input class="input-field" type="text" id="name" name="name" placeholder="Name of Country" required>
+        </div>
+        <div class="input-container">
+            <label for="visited">Visited: </label>
+            <select name="visited" id="visited">
+                <option value="true">True</option>
+                <option value="false">False</option>
+            </select>
+        </div>
+        <div class="input-container">
+            <label for="wishlist">Wishlist: </label>
+            <select name="wishlist" id="wishlist">
+                <option value="true">True</option>
+                <option value="false">False</option>
+            </select>
+        </div>
+        <br>
     
-    <button type="submit">Add Country</button>
-</form>
+        <button class="button" type="submit">Add Country</button>
+    </form>
+    <br>
+    <br>
+</div>
 
 {% endblock %}
