--- a/templates/countries/edit.html
+++ b/templates/countries/edit.html
@@ -1,27 +1,37 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="page-content">
+    <h3>Edit {{country.name}}</h3>
+    <p>Please complete the form to update this country.</p>
 
-<form action="/countries/{{country.id}}" method="post">
-    <div>
-        <label for="name">Name:</label>
-        <input type="text" id="name" value="{{country.name}}" name="name" required autofocus>
-    </div>
+
+    <form action="/countries/{{country.id}}" method="post">
+        <div class="input-container">
+            <label for="name">Name:</label>
+            <input class="input-field" type="text" id="name" value="{{country.name}}" name="name" required>
+        </div>
+        <div class="input-container">
+            <label for="visited">Visited: </label>
+            <select name="visited" id="visited">
+                <option value="true" {% if country.visited == True %} selected="selected" {% endif %}>True</option>
+                <option value="false" {% if country.visited == False %} selected="selected" {% endif %}>False</option>
+            </select>
+        </div>
+        <div class="input-container">
+            <label for="wishlist">Wishlist: </label>
+            <select name="wishlist" id="wishlist">
+                <option value="true" {% if country.wishlist == True %} selected="selected" {% endif %}>True</option>
+                <option value="false" {% if country.wishlist == False %} selected="selected" {% endif %}>False</option>
+            </select>
+        </div>
+        <br>
+    
+        <button class="button" type="submit">Edit Country</button>
+    </form>
     <br>
-    <div>
-        <label for="visited">Visited:</label>
-        <select name="visited" id="visited">
-            <option value="true" {% if country.visited == True %} selected="selected" {% endif %}>True</option>
-            <option value="false" {% if country.visited == False %} selected="selected" {% endif %}>False</option>
-        </select>
-    </div>
-    <div>
-        <label for="wishlist">Wishlist:</label>
-        <select name="wishlist" id="wishlist">
-            <option value="true" {% if country.wishlist == True %} selected="selected" {% endif %}>True</option>
-            <option value="false" {% if country.wishlist == False %} selected="selected" {% endif %}>False</option>
-        </select>
-    </div>
-    <button type="submit">Edit Country</button>
-</form>
+    <br>
+</div>
 
 {% endblock %}
+
+        
