--- a/templates/cities/edit.html
+++ b/templates/cities/edit.html
@@ -1,37 +1,44 @@
 {% extends "base.html" %}
 {% block content %}
 
-<form action="/cities/{{city.id}}" method="post">
-    <div>
-        <label for="name">Name:</label>
-        <input type="text" id="name" value="{{city.name}}" name="name" required autofocus>
-    </div>
-    <br>
-    <!-- <p>Name: {{city.name}}</p> -->
-    <div>
-        <label for='country'>Country:</label>
-        <select name='country_id' id='country'>
+<div class="page-content">
+    <h3>Edit {{city.name}}</h3>
+    <p>Please complete the form to update this city.</p>
+
+
+    <form action="/cities/{{city.id}}" method="post">
+        <div class="input-container">
+            <label for="name">Name:</label>
+            <input class="input-field" type="text" id="name" value="{{city.name}}" name="name" required>
+        </div>
+        <div class="input-container">
+            <label for='country'>Country:</label>
+            <select name='country_id' id='country'>
             {% for country in countries %}
                 <option value="{{country.id}}" {% if city.country.id == country.id %} selected="selected" {% endif %}>{{country.name}}</option>
             {% endfor %}
-        </select>    
-    </div>
-    <!-- <p>Country: {{city.country.name}}</p> -->
-    <div>
-        <label for="visited">Visited:</label>
-        <select name="visited" id="visited">
-            <option value="true" {% if city.visited == True %} selected="selected" {% endif %}>True</option>
-            <option value="false" {% if city.visited == False %} selected="selected" {% endif %}>False</option>
-        </select>
-    </div>
-    <div>
-        <label for="wishlist">Wishlist:</label>
-        <select name="wishlist" id="wishlist">
-            <option value="true" {% if city.wishlist == True %} selected="selected" {% endif %}>True</option>
-            <option value="false" {% if city.wishlist == False %} selected="selected" {% endif %}>False</option>
-        </select>
-    </div>
-    <button type="submit">Edit City</button>
-</form>
+            </select> 
+        </div>
+        <div class="input-container">
+            <label for="visited">Visited: </label>
+            <select name="visited" id="visited">
+                <option value="true" {% if city.visited == True %} selected="selected" {% endif %}>True</option>
+                <option value="false" {% if city.visited == False %} selected="selected" {% endif %}>False</option>
+            </select>
+        </div>
+        <div class="input-container">
+            <label for="wishlist">Wishlist: </label>
+            <select name="wishlist" id="wishlist">
+                <option value="true" {% if city.wishlist == True %} selected="selected" {% endif %}>True</option>
+                <option value="false" {% if city.wishlist == False %} selected="selected" {% endif %}>False</option>
+            </select>
+        </div>
+        <br>
+    
+        <button class="button" type="submit">Edit City</button>
+    </form>
+    <br>
+    <br>
+</div>
 
 {% endblock %}
