--- a/templates/attractions/index.html
+++ b/templates/attractions/index.html
@@ -6,7 +6,7 @@
 
   <h1>Sights & Attractions</h1>
   <a href="/attractions/new"><button class="button">Add</button></a>
-  <a href="/attractions/free"><button class="button">Free Attractions</button></a>
+  <a href="/attractions/free"><button class="button">Attractions With No Entry Fee</button></a>
 
   <table class="styled-table">
     <thead>
