--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -1,9 +1,9 @@
 .grid-container {
     display: grid;
     grid-template-columns: 25% 50% 25%;
-    grid-template-rows: 300px 20px 20px 100px 300px auto;
+    grid-template-rows: 250px 50px 100px 100px 250px auto;
     column-gap: 20px;
-    row-gap: 20px;
+    row-gap: 10px;
 
 }
 
@@ -12,6 +12,7 @@
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 3;
+    justify-self: start;
 }
 
 .item2 {
@@ -21,11 +22,16 @@
     grid-row-end: 4;
 }
 
+.item2 a {
+    color: black;
+}
+
 .item3 {
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 4;
     grid-row-end: 6;
+    justify-self: start;
 }
 
 .item4 {
@@ -33,4 +39,19 @@
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 7;
+}
+
+.item4 a {
+    color:black;
+}
+
+.button-container {
+    display: inline-flex;
+    
+}
+
+.button-journal {
+    background-color: transparent;
+    cursor: pointer;
+    margin-right: 5px;
 }
