--- a/templates/reviews/index.html
+++ b/templates/reviews/index.html
@@ -9,11 +9,15 @@
       <img src="/static/images/Profile.PNG" alt="A profile picture example" style="width:auto;height:300px">
     </div>
     <div class="item2">
+      <br>
+      <br>
       <a href="/visited">Places I've Been</a>
+      <br>
+      <br>
       <a href="/wishlist">Places on My Wishlist</a>
     </div>
     <div class="item3">
-      <img src="/static/images/Fernweh.PNG" alt="Fernweh dictionary description" style="width:autho;height:300px">
+      <img src="/static/images/Fernweh.PNG" alt="Fernweh dictionary description" style="width:100%;height:300px">
     </div>
     <div class="item4">
       <h1>Reviews & Notes</h1>
@@ -25,8 +29,11 @@
       <a href="/reviews/{{review.id}}"> {{review.title}}</a>
       <p>{{review.content}}</p>
       <p>Attraction: {{review.attraction.name}}</p>
-      <a href="reviews/{{review.id}}/edit"><button class="button">Edit</button></a>
-      <form action="/review/{{review.id}}/delete" method="POST"><button class="button">Delete</button></form>
+      <div class="button-container">
+        <a href="reviews/{{review.id}}/edit"><button class="button-journal">Edit</button></a>
+        <form action="/review/{{review.id}}/delete" method="POST"><button class="button-journal">Delete</button></form>
+      </div>
+      <br>
       <br>
       <br>
       {% endfor %}
