--- a/templates/reviews/index.html
+++ b/templates/reviews/index.html
@@ -11,10 +11,10 @@
     <div class="item2">
       <br>
       <br>
-      <a href="/visited">Places I've Been</a>
+      <a href="/review/visited">Places I've Been</a>
       <br>
       <br>
-      <a href="/wishlist">Places on My Wishlist</a>
+      <a href="/review/wishlist">Places on My Wishlist</a>
     </div>
     <div class="item3">
       <img src="/static/images/Fernweh.PNG" alt="Fernweh dictionary description" style="width:100%;height:300px">
