--- a/templates/cities/search.html
+++ b/templates/cities/search.html
@@ -1,12 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="page-content">
+    <h3>Search for a City</h3>
 
-<form action="/cities/search_results" method="post">
-    <div>
-        <label for="search">Input Your Search Here:</label>
-        <input type="text" id="search" name="search" placeholder="Search" required autofocus>
-    </div>
-    <button type="submit">Search</button>
-</form>
+    <form action="/cities/search_results" method="post">
+        <div class="input-container">
+            <label for="search">Input Your Search Here:</label>
+            <input class="input-field" type="text" id="search" name="search" placeholder="Search" required>
+        </div>
+        <br>
+
+        <button class="button" type="submit">Search</button>
+    </form>
+    <br>
+    <br>
+</div>
 
 {% endblock %}
