further css styling

--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -45,6 +45,28 @@
     color:black;
 }
 
+.item5 {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+
+.item6 {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 5;
+}
+
+.item7 {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 5;
+    grid-row-end: 6;
+}
+
+
 .button-container {
     display: inline-flex;
     
