--- a/templates/countries/index.html
+++ b/templates/countries/index.html
@@ -3,9 +3,15 @@
 {% block content %}
 <div class="page-content">
 
-
-  <h1>Countries</h1>
-  <a href="/countries/new"><button class="button">Add Country</button></a>
+  <div class="hdr-container">
+    <h1>Countries</h1>
+    <a href="/countries/new"><button class="button">Add Country</button></a>
+  </div>
+  <div class="img-container">
+    <img src="/static/images/Country1.PNG" alt="An image of a lighthouse" style="width:250px;height:250px">
+    <img src="/static/images/Country2.PNG" alt="An image of the sea from a beach" style="width:250px;height:250px">
+    <img src="/static/images/Country3.PNG" alt="An image of orange trees" style="width:250px;height:250px">
+  </div>
 
   <table class="styled-table">
     <thead>
