--- a/templates/reviews/index.html
+++ b/templates/reviews/index.html
@@ -38,6 +38,15 @@
       <br>
       {% endfor %}
     </div>
+    <div class="item5">
+      <img src="/static/images/Cat.PNG" alt="An image of a cat sleeping" style="width:250px;height:250px">
+    </div>
+    <div class="item6">
+      <img src="/static/images/Gucci.PNG" alt="An image of Gucci outfits on mannequins" style="width:250px;height:250px">
+    </div>
+    <div class="item7">
+      <img src="/static/images/Stroopwafels.PNG" alt="An image of Dutch Stroopwafels" style="width:250px;height:250px">
+    </div>
   </div>
 
 
