--- a/static/css/table.css
+++ b/static/css/table.css
@@ -2,6 +2,8 @@
     border-collapse: collapse;
     margin: 25px 0;
     min-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .styled-table thead tr {
