--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/static/css/table.css">
     <link rel="stylesheet" href="/static/css/form.css">
     <link rel="stylesheet" href="/static/css/grid.css">
+    <link rel="stylesheet" href="/static/css/headers.css">
 </head>
 <body>
     <header>
