--- a/templates/attractions/index.html
+++ b/templates/attractions/index.html
@@ -3,12 +3,21 @@
 {% block content %}
 <div class="page-content">
 
-
-  <h1>Sights & Attractions</h1>
-  <a href="/attractions/new"><button class="button">Add</button></a>
-  <a href="/attractions/free"><button class="button">Attractions With No Entry Fee</button></a>
-
-  <table class="styled-table">
+  <div class="hdr-container">
+    <h1>Sights & Attractions</h1>
+    <a href="/attractions/new"><button class="button">Add</button></a>
+  </div>
+  <div class="img-container">
+    <img src="/static/images/Attraction1.PNG" alt="An image of Kew Gardens inside a glasshouse" style="width:250px;height:auto">
+    <img src="/static/images/Attraction2.PNG" alt="An image of a Dior outfit on a mannequin" style="width:250px;height:auto">
+    <img src="/static/images/Attraction3.PNG" alt="An image of gondolas in Venice" style="width:250px;height:334px">
+  </div>
+  <br>
+  <br>
+  <div class="free">
+    <a href="/attractions/free"><button class="button">Attractions With No Entry Fee</button></a>
+  </div>
+    <table class="styled-table">
     <thead>
       <tr>
         <th>Name</th>
