--- a/templates/cities/index.html
+++ b/templates/cities/index.html
@@ -2,9 +2,16 @@
 
 {% block content %}
 <div class="page-content">
-  <h1>Cities</h1>
-  <a href="/cities/new"><button class="button">Add City</button></a>
 
+  <div class="hdr-container">
+    <h1>Cities</h1>
+    <a href="/cities/new"><button class="button">Add City</button></a>
+  </div>
+  <div class="img-container">
+    <img src="/static/images/City1.PNG" alt="An image New York from the Brooklyn Bridge" style="width:250px;height:250px">
+    <img src="/static/images/City2.PNG" alt="An image of an Italian cathedral" style="width:250px;height:250px">
+    <img src="/static/images/CITY3.PNG" alt="An image of a man riding a bike over a canal in Amsterdam" style="width:250px;height:250px">
+  </div>
   <table class="styled-table">
     <thead>
       <tr>
